# SignSafe

./: .env  .replit  CONTRIBUTING.md  LICENSE  README.md  app.py  config.py  config.template.py  install_dependencies.py  main.py  pyproject.toml  replit.md
docs/: ARCHITECTURE.md  README.md  Readme.md  USER_GUIDE.md
pipeline/: clause_splitter.py  ocr_parser.py  risk_analyzer.py  simplifier.py
src/: __init__.py
src/pipeline/: __init__.py  clause_splitter.py  ocr_parser.py  risk_analyzer.py  simplifier.py
src/ui/: __init__.py  streamlit_ui.py  styles.py
src/utils/: __init__.py  gemini_simplifier.py  pathway_monitor.py  translator.py  voice_chat.py
tests/: __init__.py  test_pipeline.py
ui/: streamlit_ui.py
